--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,8 @@
   "header"
   "main"
   "footer"
-  "filler";
+  "filler"
+  ;
 }
 button {
   border: none;
@@ -41,7 +42,6 @@ button {
   background-color: var(--secondary-color);
   color: var(--primary-color);
   box-shadow: 0 0 15px 3px var(--secondary-accent);
-  margin-bottom: 50px;
 }
 .player-options-button {
   display: flex;
@@ -72,25 +72,53 @@ button {
   grid-area: main;
   min-height: 60vh;
   display: grid;
-  grid-template-rows: min-content min-content;
+  grid-template-columns: 3fr 1fr;
   place-items: center;
   grid-template-areas: 
-  "turn-display"
-  "game-board-container"
+  "game-board-container  information-side-bar"
   ;
 }
-.turn-display {
-  grid-area: turn-display;
-  font-size: 1.75rem;
-  font-weight: bolder;
-  padding-bottom: 15px;
+
+aside.session-information-container {
+  height: 100%;
+  width: 100%;
+  color: var(--primary-color);
+  background-color: var(--secondary-accent);
+  box-shadow: 0 0 10px 3px var(--secondary-accent);
+  font-size: 1.2rem;
 }
+aside.session-information-container > h3 {
+  text-align: center;
+  padding: 15px;
+  font-size: 1.75rem;
+}
+aside.session-information-container .player-one-session,
+aside.session-information-container .player-two-session,
+aside.session-information-container .session-totals {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+/* Game Board Container */
+/* #region */
 .game-board-container {
   grid-area: game-board-container;
   display: grid;
-  grid-template-rows: auto auto auto;
-  place-self: center;
+  grid-template-rows: min-content 1fr;
+  place-content: center;
+  justify-content: center;
+}
+.turn-display {
+  grid-area: turn-display;
+  grid-row: 1;
+  grid-column: 1;
+  align-self: center;
   justify-self: center;
+  font-size: 1.75rem;
+  font-weight: bolder;
+  padding-bottom: 5px;
 }
 .game-board-cell {
   display: flex;
@@ -124,8 +152,10 @@ button {
   border-left: 5px solid var(--secondary-color);
   width: 135px;
 }
+/* #endregion */
 
-
+/* Footer Container */
+/* #region */
 .footer-container {
   grid-area: footer;
   display: flex;
@@ -137,7 +167,6 @@ button {
   color: var(--primary-color);
   font-weight: bold;
   font-size: 1.8em;
-  margin-top: 10px;
 }
 .github-logo-link {
   width: 60px;
@@ -146,8 +175,7 @@ button {
 .github-logo-link:hover {
   fill: var(--secondary-accent);
 }
-
-
+/* #endregion */
 
 /* Player Information Dialog Form*/
 /* #region */
