--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,22 +270,35 @@ form#information-options-form {
 
 /* End Round Dialog */
 /* #region */
+dialog#end-round-dialog {
+  position: fixed;
+  top:  10px;
+  bottom: auto;
+} 
+::backdrop {
+  background: rgba(0, 0, 0, 0);
+ }
 #end-round-dialog[open] {
-  width: 50%;
+  width: 100%;
   border: 10px solid var(--secondary-accent);
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 25px;
+  gap: 25px
+}
+#end-round-dialog > h1 {
+  min-width: 150px;
 }
 #end-round-dialog .end-round-buttons-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 15px;
 }
 #end-round-dialog .end-round-buttons-container > button {
-  width: 100%;
+  width: 210px;
   padding: 10px;
   background-color: var(--secondary-color);
   color: var(--primary-color);
@@ -297,7 +310,7 @@ form#information-options-form {
 
 #end-round-dialog .end-round-buttons-container > button:hover{
   background-color: var(--secondary-accent);
-  color: var(--primary-color);
+  color: var(--secondary-color);
   border-color: var(--secondary-color)
 }
 /* #endregion */
