Create unbeatable AI

--- a/styles/mynormalize.css
+++ b/styles/mynormalize.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   font-size: 16px;
 	font-family: 
-		'atkinson-hyper-legible'
+		'atkinson-hyper-legible',
 		system-ui,
 		'Segoe UI',
 		Roboto,
